tests/machine/x/c/left_join_multi.error
line: 0
error: output mismatch
-- got --
--- Left Join Multi ---
5.16069376482911e-311 Alice 5.16069376482911e-311
5.16069376482911e-311 Bob 5.16069376482911e-311
-- want --
--- Left Join Multi ---
100 Alice map[orderId:100 sku:a]
101 Bob <nil>
   1: #include <stdio.h>
